# yaafpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/middlewares/: memory.py  routing.py
docs/patterns/: factory_middleware.md  retry_wrapper.md  stream_middleware.md
examples/: agent.py  my_bot.py
src/yaaf/: __init__.py  types.py  workflows.py
src/yaafpy/: __init__.py  adapters.py  decorators.py  sequential_flows.py  stream_flow.py  stream_flows.py  types.py  workflows.py
tests/: test_nesting.py  test_nesting_batch.py  test_sequential_flows.py  test_stream_flows.py  test_streaming_broken.py  test_user_workflow.py  test_workflow.py  verify_features.py
yaaf/: adapters.py  types.py  workflows.py
