[project]
name = "yaafpy"
version = "0.1.2"
description = "Yet Another Agentic Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = [
  "hatchling",
  "pathspec>=0.10"
]
build-backend = "hatchling.build"
