[project]
name = "yaafpy"
version = "0.2.1"
description = "Yet Another Agentic Framework"
readme = "README.md"
requires-python = ">=3.9"
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
[build-system]
requires = [
  "hatchling",
  "pathspec>=0.10"
]
build-backend = "hatchling.build"
